# MultiBurst

./: .gitignore  README.md  multiburst.py  multiburst.yml  pyproject.toml  requirements.txt
ansible/: ansible.cfg  playbook_build.yml  playbook_clean.yml  playbook_run.yml
core/: ansible_controller.py  droplet_controller.py  terraform_controller.py  utils.py
scripts/: splitter.sh
terraform/templates/: main.tf.j2  outputs.tf.j2  variables.tf.j2
wordlists/: README.md
